src/tests/InvalidTests/TestArray1.agl
c : Array<Array<Point>> = [[(1,2), (3,4)], [(1,2), (3,4)]]; # correct. Type: Array<Array<Point>> ; Assignment Type: Array<Array<Point>>

c = ["a","b","c","d","e"]; # Error. Expression type does not conform to variable type! Type: Array<Array<Point>> ; Assignment Type: Array<String>
